; ModuleID = '/home/carl/AnghaBench/freebsd/stand/efi/loader/arch/i386/extr_i386_copy.c_i386_copyin.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/efi/loader/arch/i386/extr_i386_copy.c_i386_copyin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @i386_copyin(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @PTOV(i32 %8)
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @bcopy(i8* %7, i32 %9, i64 %10)
  %12 = load i64, i64* %6, align 8
  ret i64 %12
}

declare dso_local i32 @bcopy(i8*, i32, i64) #1

declare dso_local i32 @PTOV(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
